# controllers/swagger/SocialMediaService.js
@@ -12,9 +12,10 @@ exports.usersIdConnectNetworkDELETE = function (args, res, next) {
 		"password"           : "aeiou",
 		"linkedInAccessToken": "aeiou",
 		"xingId"             : "aeiou",
-		"linkedInProfile"    : "aeiou",
-		"id"                 : "aeiou",
-		"username"           : "aeiou"
+		"share"              : 1.3579000000000001069366817318950779736042022705078125,
+		"userId"             : "aeiou",
+		"username"           : "aeiou",
+		"linkedInId"         : "aeiou"
 	};
 	if (Object.keys(examples).length > 0) {
 		res.setHeader('Content-Type', 'application/json');
@@ -23,7 +24,7 @@ exports.usersIdConnectNetworkDELETE = function (args, res, next) {
 	else {
 		res.end();
 	}
-
+  
 }
 
 exports.usersIdConnectNetworkGET = function (args, res, next) {
@@ -41,7 +42,7 @@ exports.usersIdConnectNetworkGET = function (args, res, next) {
 	else {
 		res.end();
 	}
-
+  
 }
 
 exports.usersNetworkIdGET = function (args, res, next) {
@@ -74,5 +75,38 @@ exports.usersNetworkIdGET = function (args, res, next) {
 		res.end();
 	}
 
+}
+
+exports.usersSearchGET = function (args, res, next) {
+	/**
+	 * parameters expected in the args:
+	 * keywords (String)
+	 **/
+	var examples                 = {};
+	examples['application/json'] = [
+		{
+			"gender"           : true,
+			"last_name"        : "aeiou",
+			"employment_status": "aeiou",
+			"id"               : "aeiou",
+			"employment"       : {
+				"end_date"   : "aeiou",
+				"begin_date" : "aeiou",
+				"name"       : "aeiou",
+				"description": "aeiou",
+				"industry"   : "aeiou",
+				"title"      : "aeiou"
+			},
+			"first_name"       : "aeiou"
+		}
+	];
+	if (Object.keys(examples).length > 0) {
+		res.setHeader('Content-Type', 'application/json');
+		res.end(JSON.stringify(examples[Object.keys(examples)[0]] || {}, null, 2));
+	}
+	else {
+		res.end();
+	}
+  
 }
 
